[project]
name = "drug-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "admet-ai==1.3.1",
    "fastapi>=0.125.0",
    "biopython>=1.83",
    "gemmi>=0.7.4",
    "meeko>=0.7.1",
    "numpy>=1.26,<2.0",
    "pandas>=2.0,<2.2",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.4,<2",
    "scipy>=1.11,<2",
    "sqlalchemy>=2.0.45",
    "torch==2.5.0",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
